@@ -20,6 +20,7 @@
 * Fix - UPE missing international card fees.
 * Update - Bump minimum supported version of WooCommerce from 5.4 to 5.5.
 * Update - Bump minimum required version of WooCommerce from 4.0 to 4.4.
+* Fix - Add credit card on My Account using other payment gateways does not show "Your card number is incomplete" error
 
 = 3.0.0 - 2021-09-16 =
 * Add - Download deposits report in CSV.
